# AAIS-AI

./: .gitignore  README.md  SampleSubmission.csv  manifest-9c3e321cc2add60fb6c94a852921c61d20241125-3872-114kmzr.json  pyproject.toml
docs/: VariableDefinitions.docx
notebooks/: Starter_Notebook.ipynb  analysis.ipynb  auto_encoder.ipynb  best_model.pth  best_svm_model.joblib  best_svm_model1.joblib  best_svm_model_with_encoder_decoder.joblib  boosting.ipynb  lstm.ipynb  multimodal.ipynb  submission_1.csv  submission_2.csv  submission_3.csv  svm.ipynb  variatinol_encoder.ipynb  variational_encoder.ipynb
scripts/: download_dataset.py
src/: main.py
src/analysis/: analysis.py
src/models/: svm.py
src/studie/: processed.py
src/tools/: preprocess.py
